Temporary fix for icon fonts to work within dist, but will be broken in local

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-$icon-font-path: "../../bower_components/bootstrap-sass/assets/fonts/bootstrap/";
+$icon-font-path: "../fonts/";
 
 /*!
 ========== INIT
